# openapi/switchboard.openapi.json
@@ -412,6 +412,18 @@
             "title": "Title",
             "type": "string"
           },
+          "ui_impact": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "default": null,
+            "title": "Ui Impact"
+          },
           "workstream_id": {
             "title": "Workstream Id",
             "type": "string"
